--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,72 @@
-*{
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+}
+ 
+body {
+    height: 100vh;
+    background-color: darkgray;
+    font-family: "Helvetica";
+}
+
+header {
+    width: 100%;
+    height: 100px;
+    text-align: center;
+}
+
+main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    padding: 40px;
+    font-size: 40px;
+}
+
+ul {
+    width: 60%;
+    display: grid;
+    grid-template-columns: 45% 45%;
+    justify-content: center;
+}
+
+.metrica {  
+    margin:8px;
+    padding: 14px;
+    border: 1px solid beige;
+    display: flex;
+    justify-content: center;
+}
+
+textarea {
+    width: 70%;
+    height: 200px;
+    padding: 12px;
+    color: brown;
+    border-radius: 12px;
+    margin: 20px 0 20px 0;
+}
+
+#reset-button {
+    width: 200px;
+    padding: 8px;
+    color: darkgrey;
+    height: 60px;
+    font-size: 24px
+}
+
+footer {
+    width: 100%;
+    height: 50px;
+    text-align: end;}
+
+footer p {
+    padding: 50px;
+    font-family: "Brush Script MT";
+    font-size: 30px;
 }
