--- a/src/style.css
+++ b/src/style.css
@@ -6,8 +6,9 @@
  
 body {
     height: 100vh;
-    background-color: darkgray;
+    background-color: #A5BD87;
     font-family: "Helvetica";
+    color: #583A23
 }
 
 header {
@@ -26,19 +27,23 @@ main {
 h1 {
     padding: 40px;
     font-size: 40px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
 }
 
 ul {
     width: 60%;
+    margin-top: 16px;
     display: grid;
     grid-template-columns: 45% 45%;
     justify-content: center;
 }
 
 .metrica {  
-    margin:8px;
+    margin:16px;
     padding: 14px;
-    border: 1px solid beige;
+    border: 3px solid #E1AA7D;
+    background-color: #DEB491;
     display: flex;
     justify-content: center;
 }
@@ -47,21 +52,32 @@ textarea[name="user-input"] {
     width: 70%;
     height: 200px;
     padding: 12px;
+    border: none;
     border-radius: 12px;
     margin: 20px 0 20px 0;
+    background-color:#B6D094;
+    color: #583A23;
+    font-size: 20px;
 }
 
 #reset-button {
-    width: 200px;
-    padding: 8px;
-    color: darkgrey;
+    width: 300px;
+    margin-top: 16px ;
+    padding: 12px;
+    border: 0;
+    border-radius: 16px;
     height: 60px;
-    font-size: 24px
+    font-size: 24px;
+    background-color: #DEB491;
+    color: #583A23;
+    box-shadow: 4px 4px #DFC2A8;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
 }
 
 footer {
     width: 100%;
-    height: 50px;
+    height: 50px;   
     text-align: end;}
 
 footer p {
